
Gepi-master (Version de développement)
===========================

Carnets de notes:
- Possibilité de faire apparaitre une moyenne générale sur les relevés de notes 
  (malgré toutes les réserves sur la représentativité de cette moyenne).
- Prise en compte de la date d'entrée dans l'établissement pour ne pas proposer 
  la saisie de note si le devoir est antérieur à l'entrée de l'élève.

Discipline:
- Possibilité de définir des utilisateurs spécifiques individuels comme destinataires 
  des alertes sur les incidents disciplinaires 
  (par exemple les comptes Assistante sociale, Infirmière,...).

Trombinoscopes:
- Encodage par défaut des photos avec extension de la chaine aléatoire.

Examens blancs:
- Possibilité d'insérer le fichier signature comme dans les bulletins.


Gepi-1.7.2 (06/01/2018)
===========================

Bulletins:
- Bulletins 2016: Possibilité d'imprimer le bulletin de fin de cycle.
- Bulletins PDF classiques: Possibilité d'afficher une ligne moyenne générale annuelle.
- Éléments de programmes: Proposition d'une liste d'items prédéfinis.
- Éléments de programmes: Possibilité d'insérer plusieurs éléments de programmes 
  d'un coup en les séparant d'un pipe |.
- Possibilité de ne pas faire apparaitre les noms des professeurs sur les bulletins 
  et relevés de notes pour certains enseignements.
- Bulletins HTML: Possibilité de générer un bulletin sans colonnes moyennes.
- Verrouillage des périodes: Possibilité d'ouvrir d'un clic les classes 
  dont le conseil de classe de la période précédente est passé.
- Possibilité d'ouvrir par lots d'enseignements, pour une classe donnée, la 
  saisie/modification exceptionnelle d'appréciations alors que la période est 
  partiellement close (pour dépanner ou pouvoir modifier des appréciations alors 
  que les notes sont verrouillées).

Absences 2:
- Possibilité de restreindre le décompte des absences sur les bulletins pour la 
  dernière période en limitant l'extraction du début de la période jusqu'à la 